--- a/docs/src/pages/versions/index.astro
+++ b/docs/src/pages/versions/index.astro
@@ -8,7 +8,7 @@ import {
   GITHUB_URL,
   PRODUCTION_BASE_URL,
 } from "../../lib/info.js";
-import DefineLocalDate from "../../components/DefineLocalDate.astro";
+import DefineLocalDate, { calculateLocalDateCspHash } from "../../components/DefineLocalDate.astro";
 import Layout from "../../layouts/Layout.astro";
 
 export type Releases =
