--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import { joinURL } from "ufo";
-import '../styles/global.css';
+import "../styles/global.css";
 
 interface Props {
   lang: string;
@@ -18,15 +18,17 @@ const { BASE_URL } = import.meta.env;
       http-equiv="Content-Security-Policy"
       content={`
         default-src 'self';
-        script-src 'self' https://static.cloudflareinsights.com${import.meta.env.PROD ? '' : " 'unsafe-inline'"};
+        script-src 'self' https://static.cloudflareinsights.com${import.meta.env.PROD ? "" : " 'unsafe-inline'"};
         connect-src 'self' https://cloudflareinsights.com;
-        style-src 'self'${import.meta.env.PROD ? '' : " 'unsafe-inline'"};
+        style-src 'self'${import.meta.env.PROD ? "" : " 'unsafe-inline'"};
         img-src 'self' data:;
         font-src 'self';
         object-src 'none';
         base-uri 'none';
         form-action 'self';
-      `.replaceAll(/[\n\s]+/g, " ").trim()}
+      `
+        .replaceAll(/[\n\s]+/g, " ")
+        .trim()}
     />
     <meta charset="utf-8" />
     <title>{title}</title>
