--- a/docs/src/components/DefineFileVerifierDropArea.astro
+++ b/docs/src/components/DefineFileVerifierDropArea.astro
@@ -55,9 +55,13 @@ export function aggressiveMinify(source: string) {
   return source;
 }
 
+export function mangleClassNames(source: string) {
+  return source.replaceAll("active", "a");
+}
+
 export async function generateCode() {
   const compactFileVerifierDropAreaRaw = FileVerifierDropAreaRaw.replaceAll(
-    /\/\*html\*\/\s*`([\s\S]*?)`/g,
+    /\/\*css\*\/\s*`([\s\S]*?)`/g,
     (match, innerHTML) => {
       return "`" + aggressiveMinify(innerHTML) + "`";
     },
@@ -69,16 +73,23 @@ export async function generateCode() {
     target: "esnext",
   });
 
-  const minifiedCode = code.replaceAll("active", "a");
-  return minifiedCode;
+  return mangleClassNames(code);
 }
 
-export async function calculateFileVerifierDropAreaCspHash() {
-  const code = await generateCode();
-  const data = new TextEncoder().encode(code);
-  const hashBuffer = await crypto.subtle.digest("SHA-256", data);
-  const base64String = Buffer.from(hashBuffer).toString("base64");
-  return `sha256-${base64String}`;
+export async function calculateFileVerifierDropAreaInlineCssHash() {
+  const hashes = await Promise.all(
+    [...FileVerifierDropAreaRaw.matchAll(/\/\*css\*\/\s*`([\s\S]*?)`/g)].map(
+      async (match) => {
+        const code = mangleClassNames(aggressiveMinify(match[1]));
+        const data = new TextEncoder().encode(code);
+        const hashBuffer = await crypto.subtle.digest("SHA-256", data);
+        const base64String = Buffer.from(hashBuffer).toString("base64");
+        return ` 'sha256-${base64String}'`;
+      },
+    ),
+  );
+
+  return hashes.join("");
 }
 
 const code = await generateCode();
