--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -8,6 +8,10 @@ interface Props {
   additionalCssHashes?: string;
 }
 
+function minifyContentSecurityPolicy(csp: string) {
+  return csp.replace(/\s./g, " ").trim();
+}
+
 const { lang, title, additionalCssHashes } = Astro.props;
 const { BASE_URL } = import.meta.env;
 ---
@@ -17,9 +21,9 @@ const { BASE_URL } = import.meta.env;
   <head>
     <meta
       http-equiv="Content-Security-Policy"
-      content={`
+      content={minifyContentSecurityPolicy(`
         default-src 'self';
-        script-src 'self' https://static.cloudflareinsights.com${import.meta.env.PROD ? "" : " 'unsafe-inline'"};
+        script-src 'self' https://static.cloudflareinsights.com${import.meta.env.PROD ? "" : " 'unsafe-inline' 'unsafe-eval'"};
         connect-src 'self' https://cloudflareinsights.com;
         style-src 'self'${additionalCssHashes ?? ""}${import.meta.env.PROD ? "" : " 'unsafe-inline'"};
         img-src 'self' data:;
@@ -29,9 +33,9 @@ const { BASE_URL } = import.meta.env;
         form-action 'self';
         upgrade-insecure-requests;
         require-trusted-types-for 'script';
-      `
-        .replaceAll(/[\n\s]+/g, " ")
-        .trim()}
+        frame-src 'none';
+        worker-src 'self';
+      `)}
     />
     <meta charset="utf-8" />
     <title>{title}</title>
