--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -8,10 +8,6 @@ interface Props {
   additionalCssHashes?: string;
 }
 
-function minifyContentSecurityPolicy(csp: string) {
-  return csp.replace(/\s./g, " ").trim();
-}
-
 const { lang, title, additionalCssHashes } = Astro.props;
 const { BASE_URL } = import.meta.env;
 ---
@@ -21,21 +17,22 @@ const { BASE_URL } = import.meta.env;
   <head>
     <meta
       http-equiv="Content-Security-Policy"
-      content={minifyContentSecurityPolicy(`
-        default-src 'self';
-        script-src 'self' https://static.cloudflareinsights.com${import.meta.env.PROD ? "" : " 'unsafe-inline' 'unsafe-eval'"};
-        connect-src 'self' https://cloudflareinsights.com;
-        style-src 'self'${additionalCssHashes ?? ""}${import.meta.env.PROD ? "" : " 'unsafe-inline'"};
-        img-src 'self' data:;
-        font-src 'self';
-        object-src 'none';
-        base-uri 'none';
-        form-action 'self';
-        upgrade-insecure-requests;
-        require-trusted-types-for 'script';
-        frame-src 'none';
-        worker-src 'self';
-      `)}
+      content={[
+        `base-uri 'none';`,
+        `connect-src 'self' https://cloudflareinsights.com;`,
+        `default-src 'self';`,
+        `font-src 'self';`,
+        `form-action 'self';`,
+        `frame-src 'none';`,
+        `img-src 'self' data:;`,
+        `manifest-src 'self';`,
+        `object-src 'none';`,
+        `require-trusted-types-for 'script';`,
+        `script-src 'self' https://static.cloudflareinsights.com${import.meta.env.PROD ? "" : " 'unsafe-inline' 'unsafe-eval'"};`,
+        `style-src 'self'${additionalCssHashes ?? ""}${import.meta.env.PROD ? "" : " 'unsafe-inline'"};`,
+        `upgrade-insecure-requests;`,
+        `worker-src 'self';`,
+      ].join(" ")}
     />
     <meta charset="utf-8" />
     <title>{title}</title>
