--- a/docs/src/pages/install.astro
+++ b/docs/src/pages/install.astro
@@ -41,7 +41,7 @@ const ubuntuDebAsset = release.assets.find((a) =>
 ---
 
 <Layout lang="en" title="How to install?">
-  <Fragment slot="head">
+  <Fragment slot="head-info">
     <meta
       name="description"
       content="Instructions for installing Live Background Removal Lite on various operating systems."
