--- a/docs/src/pages/404.astro
+++ b/docs/src/pages/404.astro
@@ -8,7 +8,7 @@ const { BASE_URL } = import.meta.env;
 ---
 
 <Layout lang="en" title="404 Not Found">
-  <Fragment slot="head">
+  <Fragment slot="head-info">
     <meta name="description" content="The requested page could not be found." />
   </Fragment>
 
