--- a/docs/src/pages/usage.astro
+++ b/docs/src/pages/usage.astro
@@ -253,8 +253,8 @@ const structuredData = JSON.stringify({
   </main>
 </Layout>
 
-<style>
-  img {
+<style is:global>
+  main img {
     width: 100%;
     height: auto;
   }
