--- a/docs/src/pages/versions/index.astro
+++ b/docs/src/pages/versions/index.astro
@@ -153,13 +153,15 @@ const schemaData = {
   </main>
 </Layout>
 
-<style>
-  ul {
-    max-width: 600px;
-  }
+<style is:global>
+  main {
+    ul {
+      max-width: 600px;
+    }
 
-  #latest-release {
-    font-size: 1.25rem;
-    margin-left: 2rem;
+    #latest-release {
+      font-size: 1.25rem;
+      margin-left: 2rem;
+    }
   }
 </style>
