--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -17,27 +17,31 @@ const { BASE_URL } = import.meta.env;
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content={[
-        `default-src 'self';`,
+    {
+      import.meta.env.PROD && (
+        <meta
+          http-equiv="Content-Security-Policy"
+          content={[
+            `default-src 'self';`,
 
-        `connect-src 'self' https://cloudflareinsights.com;`,
-        `script-src 'self' https://static.cloudflareinsights.com${import.meta.env.PROD ? "" : " 'unsafe-inline' 'unsafe-eval'"};`,
-        `style-src 'self'${additionalCssHashes ?? ""}${import.meta.env.PROD ? "" : " 'unsafe-inline'"};`,
+            `connect-src 'self' https://cloudflareinsights.com;`,
+            `script-src 'self' https://static.cloudflareinsights.com;`,
+            `style-src 'self'${additionalCssHashes ?? ""};`,
 
-        `base-uri 'none';`,
-        `font-src 'self';`,
-        `form-action 'self';`,
-        `frame-src 'none';`,
-        `img-src 'self' data:;`,
-        `manifest-src 'self';`,
-        `object-src 'none';`,
-        `require-trusted-types-for 'script';`,
-        `upgrade-insecure-requests;`,
-        `worker-src 'self';`,
-      ].join(" ")}
-    />
+            `base-uri 'none';`,
+            `font-src 'self';`,
+            `form-action 'self';`,
+            `frame-src 'none';`,
+            `img-src 'self' data:;`,
+            `manifest-src 'self';`,
+            `object-src 'none';`,
+            `require-trusted-types-for 'script';`,
+            `upgrade-insecure-requests;`,
+            `worker-src 'self';`,
+          ].join(" ")}
+        />
+      )
+    }
 
     <title>{title}</title>
     <slot name="head-info" />
